Temp fix for search bar not showing... again

--- a/src/blogify/frontend/src/app/shared/components/show-all-articles/show-all-articles.component.scss
+++ b/src/blogify/frontend/src/app/shared/components/show-all-articles/show-all-articles.component.scss
@@ -26,17 +26,17 @@
 
         #header-search-pad {
             flex-grow: 1;
-            @media (min-width: 0) and (max-width: $search-icon-break) {
-                display: none;
-            }
+            //@media (min-width: 0) and (max-width: $search-icon-break) {
+            //    display: none;
+            //}
         }
 
         #header-search-icon {
             margin-left: auto;
 
-            @media (min-width: $search-icon-break) {
-                display: none;
-            }
+            //@media (min-width: $search-icon-break) {
+            //    display: none;
+            //}
         }
 
         #header-create-btn {
